cargo-features = ["edition2024"]

[package]
name = "validation"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
# Public workspace dependencies
graph-types = { workspace = true, public = true }

# Public third-party dependencies

# Private workspace dependencies
error-stack = { workspace = true, features = ["hooks"] }
type-system = { workspace = true }

# Private third-party dependencies
chrono = { workspace = true, features = ["std"] }
email_address = { workspace = true }
futures = { workspace = true }
iso8601-duration = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true, features = ["std"] }

[dev-dependencies]
graph-test-data = { workspace = true }

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
utoipa = ["dep:utoipa"]

[lints]
workspace = true
