cargo-features = ["edition2024"]

[package]
name = "temporal-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
# Public workspace dependencies
graph-types = { workspace = true, public = true }

# Public third-party dependencies

# Private workspace dependencies
error-stack = { workspace = true }

# Private third-party dependencies
serde = { workspace = true }
serde_json = { workspace = true }
temporal-io-client = { workspace = true }
temporal-io-sdk-core-protos = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true, default-features = false }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
