[package]
name              = "hash-temporal-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
# Public workspace dependencies
type-system = { workspace = true, public = true }

# Public third-party dependencies

# Private workspace dependencies
error-stack = { workspace = true }

# Private third-party dependencies
serde             = { workspace = true }
serde_json        = { workspace = true }
simple-mermaid    = { workspace = true }
temporalio-client = { workspace = true }
temporalio-common = { workspace = true }
thiserror         = { workspace = true }
url               = { workspace = true }
uuid              = { workspace = true, features = ["v4"] }

[lints]
workspace = true
