cargo-features = ["edition2024"]

[package]
name = "temporal-versioning"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
codec = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }

bytes = { version = "1.6.0", optional = true }
utoipa = { version = "4.2.3", optional = true }
postgres-types = { version = "0.2.6", default-features = false, features = ["with-time-0_3"], optional = true }
time = { version = "0.3.36", default-features = false, features = ["serde", "parsing", "formatting", "macros"] }
tracing = { workspace = true, optional = true }

derive-where = { workspace = true }
postgres-protocol = { version = "0.6.6", default-features = false, optional = true }

[features]
postgres = ["dep:bytes", "dep:postgres-types", "dep:postgres-protocol", "dep:tracing"]
utoipa = ["dep:utoipa"]

[lints]
workspace = true
