cargo-features = ["edition2024"]

[package]
name = "temporal-versioning"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
# Public workspace dependencies

# Public third-party dependencies
time = { workspace = true, public = true, features = ["serde", "parsing", "formatting", "macros"] }
postgres-types = { workspace = true, public = true, features = ["with-time-0_3"], optional = true }
utoipa = { workspace = true, public = true, optional = true }

# Private workspace dependencies
codec = { workspace = true, features = ["serde"] }

# Private third-party dependencies
bytes = { workspace = true, optional = true }
derive-where = { workspace = true }
postgres-protocol = { version = "0.6.6", default-features = false, optional = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true, optional = true }

[features]
postgres = ["dep:bytes", "dep:postgres-types", "dep:postgres-protocol", "dep:tracing"]
utoipa = ["dep:utoipa"]

[lints]
workspace = true
