cargo-features = ["edition2024"]

[package]
name = "hash-tracing"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
error-stack = { workspace = true }

opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
opentelemetry = "0.23.0"
opentelemetry-otlp = "0.16.0"
sentry = { version = "0.34.0", features = [
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "reqwest",
    "rustls",
    "tracing",
], default-features = false }
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tokio.workspace = true

clap = { workspace = true, optional = true, features = ["derive", "env"] }

[features]
clap = ["dep:clap"]

[lints]
workspace = true
