cargo-features = ["edition2024"]

[package]
name = "hash-tracing"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
# Public workspace dependencies
error-stack = { workspace = true, public = true }

# Public third-party dependencies
clap_builder = { workspace = true, public = true }
tokio = { workspace = true, public = true }
tracing-appender = { workspace = true, public = true }
tracing-core = { workspace = true, public = true }
tracing-subscriber = { workspace = true, public = true, features = ["ansi", "env-filter", "json"] }
sentry-types = { workspace = true, public = true }

# Private workspace dependencies

# Private third-party dependencies
clap = { workspace = true, optional = true, features = ["derive", "env"] }
opentelemetry = "0.23.0"
opentelemetry-otlp = "0.16.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
sentry = { workspace = true }
tracing = { workspace = true }
tracing-error = "0.2.0"
tracing-opentelemetry = "0.24.0"

[features]
clap = ["dep:clap"]

[lints]
workspace = true
