[package]
name    = "darwin-kperf-codegen"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
convert_case.workspace = true
# Private third-party dependencies
plist        = { workspace = true, features = ["serde"] }
prettyplease = { workspace = true }
proc-macro2  = { workspace = true }
quote        = { workspace = true }
serde        = { workspace = true, features = ["std", "derive"] }
syn          = { workspace = true, features = ["full", "parsing"] }

[lints]
workspace = true
