[package]
name              = "darwin-kperf-codegen"
version           = "0.1.0"
authors.workspace = true
edition.workspace = true
license           = "MIT OR Apache-2.0"
publish           = false

[dependencies]
# Public workspace dependencies

# Public third-party dependencies

# Private workspace dependencies

# Private third-party dependencies
convert_case = { workspace = true }
plist        = { workspace = true, features = ["serde"] }
prettyplease = { workspace = true }
proc-macro2  = { workspace = true }
quote        = { workspace = true }
serde        = { workspace = true, features = ["std", "derive"] }
syn          = { workspace = true, features = ["full", "parsing"] }

[lints]
workspace = true
