[package]
name              = "darwin-kperf-criterion"
version           = "0.1.0"
authors.workspace = true
edition.workspace = true
license           = "MIT OR Apache-2.0"
publish           = true

[dependencies]
# Public workspace dependencies
darwin-kperf-events = { version = "0.1.0", path = "../events", public = true }

# Public third-party dependencies
codspeed-criterion-compat-walltime = { workspace = true, optional = true, public = true }
criterion                          = { workspace = true, public = true }

# Private workspace dependencies

# Private third-party dependencies

[target.'cfg(target_os = "macos")'.dependencies]
darwin-kperf = { workspace = true, public = true }

[features]
codspeed = ["dep:codspeed-criterion-compat-walltime"]

[package.metadata.docs.rs]
targets = ["aarch64-apple-darwin"]

[lints]
workspace = true
