[package]
name              = "darwin-kperf-criterion"
version           = "0.1.0"
authors.workspace = true
edition.workspace = true
license           = "MIT OR Apache-2.0"
publish           = true
description       = "Criterion measurement plugin using Apple's hardware performance counters"
documentation     = "https://docs.rs/darwin-kperf-criterion"
repository        = "https://github.com/hashintel/hash/tree/main/libs/darwin-kperf/criterion"
keywords          = ["criterion", "macos", "profiling", "benchmark", "kperf"]
categories        = ["development-tools::profiling"]

[dependencies]
# Public workspace dependencies
darwin-kperf-events = { workspace = true, public = true }

# Public third-party dependencies
codspeed-criterion-compat-walltime = { workspace = true, optional = true, public = true, default-features = false }
criterion                          = { workspace = true, public = true, default-features = false }

# Private workspace dependencies

# Private third-party dependencies

[target.'cfg(target_os = "macos")'.dependencies]
darwin-kperf = { workspace = true, public = true }

[features]
codspeed = ["dep:codspeed-criterion-compat-walltime"]

[package.metadata.docs.rs]
targets = ["aarch64-apple-darwin"]

[package.metadata.ci]
skip-docs-target = true

[lints]
workspace = true
